--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,272 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: #111;
+}
+
+body {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.text-centered {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.disabled,
+[disabled] {
+  opacity: 0.25;
+  cursor: default;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1,
+h2,
+h3 {
+  margin-bottom: 1rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ol {
+  margin-left: 1rem;
+}
+
+.container {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+header {
+  margin-bottom: 1rem;
+}
+
+input {
+  width: 100%;
+}
+
+.btn {
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+  background: #333;
+  font-size: 100%;
+  border: 0;
+  cursor: pointer;
+  opacity: 0.9;
+  color: #fff;
+  letter-spacing: -1px;
+  font-weight: 500;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+
+.btn--primary {
+  background-color: #004cff;
+  color: #fff;
+}
+
+ol {
+  margin-bottom: 1rem;
+}
+
+h1 {
+  font-size: 2.5rem;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.App__logo {
+  margin-bottom: 3rem;
+  width: 80%;
+}
+
+.App__content {
+  height: 500px;
+  position: relative;
+  overflow: hidden;
+}
+
+.Search {
+  position: relative;
+}
+
+.Search__results {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 500px;
+  z-index: 50;
+}
+
+.Search__icon {
+  position: absolute;
+  right: 2rem;
+  top: 22px;
+  color: #fff;
+  opacity: 0.5;
+}
+
+.Search__icon.fa-remove {
+  cursor: pointer;
+}
+
+.Search__input {
+  padding: 1.75rem 2rem 0.75rem 2rem;
+  font-size: 100%;
+  border-radius: 10px;
+  border: 0;
+  background: rgba(255,255,255,0.1);
+  color: #fff;
+  outline: 0;
+}
+
+.Search__label {
+  position: absolute;
+  z-index: 10;
+  left: 2rem;
+  top: 19px;
+  color: #fff;
+  transition: transform 200ms ease;
+  opacity: 0.5;
+}
+
+.Search__input:focus + .Search__label,
+.Search--filled .Search__label {
+  transform: translate3d(-14px, -14px, 0) scale(0.8);
+}
+
+.Chart {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  transition: all 375ms ease;
+  opacity: 1;
+}
+
+.Chart--searching {
+  opacity: 0;
+  transform: translateY(100%);
+}
+
+.Chart__list {
+  margin-left: 0;
+  margin-bottom: 2rem;
+}
+
+.Chart__actions {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 1rem;
+}
+
+.ChartItem {
+  display: flex;
+  align-items: center;
+  height: 80px;
+  background: #222;
+  padding: 0 2rem;
+  margin-bottom: 2px;
+  color: #fff;
+}
+
+.ChartItem__wrap {
+  display: flex;
+  align-items: center;
+  flex: 1;
+}
+
+.ChartItem__actions {
+  display: flex;
+  margin-right: -1rem;
+}
+
+.ChartItem__action {
+  width: 44px;
+  height: 44px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  cursor: pointer;
+  opacity: 0.5;
+  transition: opacity 375ms ease;
 }
 
-.App-link {
-  color: #61dafb;
+.ChartItem__action:hover {
+  opacity: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ChartItem__action--invalid {
+  opacity: 0.25;
+  cursor: default;
+}
+
+.ChartItem__action--invalid:hover {
+  opacity: 0.25;
+}
+
+.ChartItem__count {
+  margin-right: 2rem;
+}
+
+.ChartItem__placeholder {
+  opacity: 0.25;
+  font-weight: 300;
+}
+
+.Results {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  transition: all 375ms 150ms ease;
+  opacity: 0;
+}
+
+.Results--searching {
+  transform: translateY(-100%);
+  opacity: 1;
+}
+
+.Results__list {
+  margin-left: 0;
+  height: 100%;
+  list-style: none;
+  background: #111;
+}
+
+.ResultsItem {
+  color: #fff;
+  text-align: left;
+  padding: 0 2rem;
+  height: 12.5%;
+  display: flex;
+  align-items: center;
+}
+
+.ResultsItem__thumb {
+  width: 50px;
+  height: 50px;
+  margin-right: 1rem;
+  background: #222;
+  background-size: cover;
 }
